# github-rs

./: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs
config/: Cargo.toml
config/src/: lib.rs
src/: client.rs  config.rs  lib.rs  main.rs
