[package]
name = "github-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
github_rs_config = { path = './config' }
github_rs_client = { path = './client' }
ansi_term = "0.12"
clap = "3.0.0-beta.5"

[dev-dependencies]
speculate = "0.1"
k9 = "0.11.1"

[workspace]

members = [
    "config",
    "client",
]