[package]
name = "github-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# github_rs_config = { path = './config' }
# github_rs_client = { path = './client' }
ansi_term = "0.12"
clap = "3.0.0-beta.5"
syntect = "4.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = { version = "1.0.71", features = ["std", "preserve_order"] }

[dev-dependencies]
speculate = "0.1"
k9 = "0.11.1"

[workspace]

members = [
    "config",
    "client",
]